# House-Bernard

./: .gitignore  ACHILLESRUN_CHARTER.md  ADVERSARIAL_OPSEC_REVIEW.md  AGENTS_CODE.md  BOUNTIES.md  CAA_SPEC.md  CHANGELOG.md  CITIZENSHIP.md  CITIZENSHIP_GUIDE.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  COUNCIL.md  COVENANT.md  CROWN.md  DEFENSE.md  HEALTHCARE_CHARTER.md  House-Bernard-v1.2  IDENTITY_INTEGRITY_ACT.md  INTERNAL_SECURITY_ACT.md  KNIGHTS_CODE.md  LAB_SCALING_MODEL.md  LICENSE  MISSION_PRIORITY_ZERO.md  Makefile  PHILOSOPHY.md  QUICKSTART.md  README.md  REPO_SPLIT_GUIDE.md  RESEARCH_BRIEF_TEMPLATE.md  ROYALTIES.md  SOVEREIGN_ECONOMICS.md  SUNSET_CLAUSE.md  TOKEN_PROTECTION_CHARTER.md  TONIGHTS_BUILD.md  TREASURY.md  VISION.md  deployment_config.template.json  hb_utils.py  pyproject.toml  (+1 more)
airlock/: README.md  __init__.py  airlock.service  airlock_monitor.py
caa/: __init__.py  caa_state.json  canary_system.py  capture_drill.py  compartments.py  compromise_protocol.py  continuity_service.py  credential_service.py  damage_profiles.py  kill_switch.py  session_manager.py  test_caa.py
docs/: briefs.html  index.html  pipeline.html
executioner/: README.md  executioner_production.py
guild/: __init__.py  advocate_engine.py  guild_engine.py  guild_state.json  magistrate_engine.py  test_guild_system.py
guild-template/: CHARTER.md  CONTRIBUTING.md  README.md  ROSTER.md
hb_platform/: app.py  auth.py  config.py  database.py  models.py  test_platform.py
hooks/: pre-commit
infrastructure/: GOOGLE_CLOUD.md  README.md
isd/: README.md  fusion_protocol.py  (+5 more)
(+133 files in other folders)
